compiler/lib/test/parser_golden/fstring_empty_expression.golden
ERROR: 1:2:
  |
1 | f"Empty expression {}"
  |  ^^^
unexpected ""Em"
expecting "%=", "&=", "**=", "*=", "+=", "-=", "//=", "/=", "<<=", ">>=", "@=", "^=", "|=", ':', '=', call arguments, slice/index expression, or comma
